--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -20,7 +20,7 @@
               "redhat.vscode-xml",
               "tamasfe.even-better-toml",
               "timonwong.shellcheck",
-              "yzhang.markdown-all-in-one",
+              "yzhang.markdown-all-in-one"
           ],
           "settings": {
               "files.associations": {
