--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,5 +5,8 @@
 ],
 "python.analysis.extraPaths": [
     "/opt/ros/kinetic/lib/python2.7/dist-packages"
-]
+],
+"files.associations": {
+    "chrono": "cpp"
+}
 }
