--- a/src/mie443_contest_1/CMakeLists.txt
+++ b/src/mie443_contest_1/CMakeLists.txt
@@ -21,5 +21,5 @@ catkin_package()
 include_directories(include ${OpenCV_INCLUDE_DIRS} ${catkin_INCLUDE_DIRS})
 
 # add the publisher example
-add_executable(contest1 src/contest1.cpp src/callbacks.cpp)
+add_executable(contest1 src/contest1.cpp src/callbacks.cpp src/state.cpp)
 target_link_libraries(contest1 ${catkin_LIBRARIES} ${OpenCV_LIB})
