--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,6 +7,7 @@
     "/opt/ros/kinetic/lib/python2.7/dist-packages"
 ],
 "files.associations": {
-    "chrono": "cpp"
+    "chrono": "cpp",
+    "tuple": "cpp"
 }
 }
