Enabled format on save for workspace

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,5 +9,8 @@
 "files.associations": {
     "chrono": "cpp",
     "tuple": "cpp"
-}
+},
+"files.autoSave": "onFocusChange",
+"editor.formatOnSave": true,
+"C_Cpp.clang_format_fallbackStyle": "LLVM"
 }
