--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,16 +1,17 @@
 {
-"cmake.ignoreCMakeListsMissing": true,
-"python.autoComplete.extraPaths": [
-    "/opt/ros/kinetic/lib/python2.7/dist-packages"
-],
-"python.analysis.extraPaths": [
-    "/opt/ros/kinetic/lib/python2.7/dist-packages"
-],
-"files.associations": {
-    "chrono": "cpp",
-    "tuple": "cpp"
-},
-"files.autoSave": "onFocusChange",
-"editor.formatOnSave": true,
-"C_Cpp.clang_format_fallbackStyle": "LLVM"
+    "cmake.ignoreCMakeListsMissing": true,
+    "python.autoComplete.extraPaths": [
+        "/opt/ros/kinetic/lib/python2.7/dist-packages"
+    ],
+    "python.analysis.extraPaths": [
+        "/opt/ros/kinetic/lib/python2.7/dist-packages"
+    ],
+    "files.associations": {
+        "chrono": "cpp",
+        "tuple": "cpp",
+        "random": "cpp"
+    },
+    "files.autoSave": "onFocusChange",
+    "editor.formatOnSave": true,
+    "C_Cpp.clang_format_fallbackStyle": "LLVM"
 }
