--- a/src/mie443_contest2/CMakeLists.txt
+++ b/src/mie443_contest2/CMakeLists.txt
@@ -26,7 +26,9 @@ add_executable(contest2
     src/boxes.cpp
     src/navigation.cpp
     src/robot_pose.cpp
-    src/imagePipeline.cpp)
+    src/imagePipeline.cpp
+    src/state.cpp
+    src/state_machine.cpp)
 target_link_libraries(contest2 
     ${catkin_LIBRARIES}  
     ${OpenCV_LIBRARIES}  
